--- a/website/index.html
+++ b/website/index.html
@@ -24,7 +24,7 @@
     <link rel="alternate" href="https://ybconsulting.ai/fr" hreflang="fr" />
     <link rel="alternate" href="https://ybconsulting.ai/de" hreflang="de" />
     <link rel="alternate" href="https://ybconsulting.ai/es" hreflang="es" />
-
+<meta name="google-site-verification" content="HOk7kX_CS7SCKSgMR-YnntYXzrziaSWUU1Lk77bE__0" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="YB Consulting — Business Intelligence, Due Diligence & Risk Management" />
     <meta name="twitter:description" content="Intelligence, clarity, action — prevention to litigation." />
