Fix netlify.toml and deploy config

--- a/website/index.html
+++ b/website/index.html
@@ -48,5 +48,12 @@
 
     <!-- Vite entry -->
     <script type="module" src="/src/main.jsx"></script>
+<!-- Ask YB launcher -->
+<button id="ask-yb-launcher"
+  style="position:fixed; right:20px; bottom:20px; z-index:9999; padding:12px 14px; border-radius:999px; border:0; box-shadow:0 6px 18px rgba(0,0,0,.25); cursor:pointer;">
+  Ask YB 💬
+</button>
+<script type="module" src="/ask-yb.js"></script>
+
   </body>
 </html>
