Add AI background and favicon logo

--- a/website/index.html
+++ b/website/index.html
@@ -1,5 +1,4 @@
-﻿
-<!doctype html>
+﻿<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -7,6 +6,9 @@
       name="viewport"
       content="width=device-width, initial-scale=1, viewport-fit=cover"
     />
+
+    <!-- Favicon: use YB logo -->
+    <link rel="icon" type="image/png" href="/logo-yb.png" />
 
     <title>YB Consulting — Business Intelligence, Due Diligence & Risk Management</title>
     <meta
